--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,7 +35,6 @@ nav:
                 - 断网了还能ping通127.0.0.1吗: 计算机基础/计算机网络/IP/断网了还能ping通127.0.0.1吗.md
             - TCP:
                 - 梳理50道经典计算机网络面试题: 计算机基础/计算机网络/TCP/梳理50道经典计算机网络面试题.md
-                - TCP协议经典十五连问: 计算机基础/计算机网络/TCP/TCP协议经典十五连问.md
                 - TCP三次握手与四次挥手面试题: 计算机基础/计算机网络/TCP/TCP三次握手与四次挥手面试题.md
                 - TCP重传 滑动窗口 流量控制 拥塞控制: 计算机基础/计算机网络/TCP/TCP重传滑动窗口流量控制拥塞控制.md
                 - TCP实战抓包分析: 计算机基础/计算机网络/TCP/TCP实战抓包分析.md
@@ -364,6 +363,21 @@ nav:
                         - 第43天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇2/第43天.md
                         - 第44天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇2/第44天.md
                         - 第45天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇2/第45天.md
+                        - 第46天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇2/第46天.md
+                        - 第47天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇2/第47天.md
+                        - 第48天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇2/第48天.md
+                        - 第49天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇2/第49天.md
+                        - 第50天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇2/第50天.md
+                        - 第51天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇2/第51天.md
+                        - 第52天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇2/第52天.md
+                        - 第53天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇2/第53天.md
+                        - 第54天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇2/第54天.md
+                        - 第55天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇2/第55天.md
+                        - 第56天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇2/第56天.md
+                        - 第57天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇2/第57天.md
+                        - 第58天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇2/第58天.md
+                        - 第59天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇2/第59天.md
+                        - 第60天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇2/第60天.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
