--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -377,6 +377,17 @@ nav:
                         - 第58天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇2/第58天.md
                         - 第59天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇2/第59天.md
                         - 第60天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇2/第60天.md
+                    - 篇3:
+                        - 第61天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇3/第61天.md
+                        - 第62天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇3/第62天.md
+                        - 第63天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇3/第63天.md
+                        - 第64天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇3/第64天.md
+                        - 第65天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇3/第65天.md
+                        - 第66天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇3/第66天.md
+                        - 第67天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇3/第67天.md
+                        - 第68天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇3/第68天.md
+                        - 第69天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇3/第69天.md
+                        - 第70天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇3/第70天.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
