--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,6 +45,7 @@ nav:
                 - 已建立连接的TCP收到SYN会发生什么: 计算机基础/计算机网络/TCP/已建立连接的TCP收到SYN会发生什么.md
                 - 四次挥手中收到乱序的FIN包会如何处理: 计算机基础/计算机网络/TCP/四次挥手中收到乱序的FIN包会如何处理.md
                 - 在TIME_WAIT状态的TCP连接收到SYN后会发生什么: 计算机基础/计算机网络/TCP/在TIME_WAIT状态的TCP连接收到SYN后会发生什么.md
+                - 如果TIME_WAIT状态持续时间过短或者没有会有什么问题: 计算机基础/计算机网络/TCP/如果TIME_WAIT状态持续时间过短或者没有会有什么问题.md
                 - TCP连接一端断电和进程崩溃有什么区别: 计算机基础/计算机网络/TCP/TCP连接一端断电和进程崩溃有什么区别.md
                 - 拔掉网线后原本的TCP连接还存在吗: 计算机基础/计算机网络/TCP/拔掉网线后原本的TCP连接还存在吗.md
                 - tcp_tw_reuse为什么默认是关闭的: 计算机基础/计算机网络/TCP/tcp_tw_reuse为什么默认是关闭的.md
