--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,7 +48,6 @@ nav:
                 - 如果TIME_WAIT状态持续时间过短或者没有会有什么问题: 计算机基础/计算机网络/TCP/如果TIME_WAIT状态持续时间过短或者没有会有什么问题.md
                 - TCP连接一端断电和进程崩溃有什么区别: 计算机基础/计算机网络/TCP/TCP连接一端断电和进程崩溃有什么区别.md
                 - 拔掉网线后原本的TCP连接还存在吗: 计算机基础/计算机网络/TCP/拔掉网线后原本的TCP连接还存在吗.md
-                - tcp_tw_reuse为什么默认是关闭的: 计算机基础/计算机网络/TCP/tcp_tw_reuse为什么默认是关闭的.md
                 - HTTPS中TLS和TCP能同时握手吗: 计算机基础/计算机网络/TCP/HTTPS中TLS和TCP能同时握手吗.md
                 - TCP Keepalive 和 HTTP Keep-Alive是一个东西吗: 计算机基础/计算机网络/TCP/TCPKeepalive和HTTPKeep-Alive是一个东西吗.md
                 - TCP协议有什么缺陷: 计算机基础/计算机网络/TCP/TCP协议有什么缺陷.md
@@ -389,6 +388,16 @@ nav:
                         - 第68天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇3/第68天.md
                         - 第69天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇3/第69天.md
                         - 第70天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇3/第70天.md
+                        - 第71天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇3/第71天.md
+                        - 第72天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇3/第72天.md
+                        - 第73天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇3/第73天.md
+                        - 第74天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇3/第74天.md
+                        - 第75天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇3/第75天.md
+                        - 第76天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇3/第76天.md
+                        - 第77天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇3/第77天.md
+                        - 第78天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇3/第78天.md
+                        - 第79天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇3/第79天.md
+                        - 第80天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇3/第80天.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
