--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -415,6 +415,7 @@ nav:
         - 基础篇:
             - Mysql:
                 - 执行一条select语句期间发生了什么: 中间件/Mysql/基础篇/执行一条select语句期间发生了什么.md
+                - Mysql一行记录是怎么存储的: 中间件/Mysql/基础篇/Mysql一行记录是怎么存储的.md
                 - 如何开启慢Sql日志: 中间件/Mysql/基础篇/如何开启慢Sql日志.md
                 - 如何设置数据表字符编码: 中间件/Mysql/基础篇/如何设置数据表字符编码.md
                 - Mysql中Null值是如何存放的: 中间件/Mysql/基础篇/Mysql中Null值是如何存放的.md
