--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -419,6 +419,12 @@ nav:
                 - 如何开启慢Sql日志: 中间件/Mysql/基础篇/如何开启慢Sql日志.md
                 - 如何设置数据表字符编码: 中间件/Mysql/基础篇/如何设置数据表字符编码.md
                 - Mysql中Null值是如何存放的: 中间件/Mysql/基础篇/Mysql中Null值是如何存放的.md
+            - 索引篇:
+                - 索引常见面试题: 中间件/Mysql/索引篇/索引常见面试题.md
+                - 从数据页的角度看B+树: 中间件/Mysql/索引篇/从数据页的角度看B+树.md
+                - 为什么MySQL采用B+树作为索引: 中间件/Mysql/索引篇/为什么MySQL采用B+树作为索引.md
+                - MySQL单表不要超过2000W行靠谱吗: 中间件/Mysql/索引篇/MySQL单表不要超过2000W行靠谱吗.md
+                - 索引失效有哪些: 中间件/Mysql/索引篇/索引失效有哪些.md
     - 微服务与分布式理论:
         - 康威定律: 微服务与分布式/康威定律.md
         - 分布式ACID、CAP、BASE理论: 微服务与分布式/分布式ACID、CAP、BASE理论.md
