--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -412,8 +412,8 @@ nav:
         - Nodejs开发:
             - Node.js开发环境搭建: 开发语言/Nodejs/Node.js开发环境搭建.md
     - 中间件:
-        - 基础篇:
-            - Mysql:
+        - Mysql:
+            - 基础篇:
                 - 执行一条select语句期间发生了什么: 中间件/Mysql/基础篇/执行一条select语句期间发生了什么.md
                 - Mysql一行记录是怎么存储的: 中间件/Mysql/基础篇/Mysql一行记录是怎么存储的.md
                 - 如何开启慢Sql日志: 中间件/Mysql/基础篇/如何开启慢Sql日志.md
@@ -425,6 +425,7 @@ nav:
                 - 为什么MySQL采用B+树作为索引: 中间件/Mysql/索引篇/为什么MySQL采用B+树作为索引.md
                 - MySQL单表不要超过2000W行靠谱吗: 中间件/Mysql/索引篇/MySQL单表不要超过2000W行靠谱吗.md
                 - 索引失效有哪些: 中间件/Mysql/索引篇/索引失效有哪些.md
+                - MySQL使用like“%x“索引一定会失效吗: 中间件/Mysql/索引篇/MySQL使用like“%x“索引一定会失效吗.md
     - 微服务与分布式理论:
         - 康威定律: 微服务与分布式/康威定律.md
         - 分布式ACID、CAP、BASE理论: 微服务与分布式/分布式ACID、CAP、BASE理论.md
