--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -430,6 +430,8 @@ nav:
             - 事务篇:
                 - 事务隔离级别是怎么实现的: 中间件/Mysql/事务篇/事务隔离级别是怎么实现的.md
                 - MySQL可重复读隔离级别完全解决幻读了吗: 中间件/Mysql/事务篇/MySQL可重复读隔离级别完全解决幻读了吗.md
+            - 锁篇:
+                - MySQL有哪些锁: 中间件/Mysql/锁篇/MySQL有哪些锁.md
     - 微服务与分布式理论:
         - 康威定律: 微服务与分布式/康威定律.md
         - 分布式ACID、CAP、BASE理论: 微服务与分布式/分布式ACID、CAP、BASE理论.md
