--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -399,6 +399,16 @@ nav:
                         - 第78天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇3/第78天.md
                         - 第79天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇3/第79天.md
                         - 第80天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇3/第80天.md
+                        - 第81天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇3/第81天.md
+                        - 第82天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇3/第82天.md
+                        - 第83天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇3/第83天.md
+                        - 第84天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇3/第84天.md
+                        - 第85天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇3/第85天.md
+                        - 第86天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇3/第86天.md
+                        - 第87天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇3/第87天.md
+                        - 第88天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇3/第88天.md
+                        - 第89天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇3/第89天.md
+                        - 第90天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇3/第90天.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
