--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -247,6 +247,8 @@ nav:
                             - 原生SQL和SQL生成器: 开发语言/Go语言开发/Go语言进阶/数据操作/Gorm/教程/原生SQL和SQL生成器.md
                             - 通用数据库接口: 开发语言/Go语言开发/Go语言进阶/数据操作/Gorm/教程/通用数据库接口.md
                             - Gorm用法介绍: 开发语言/Go语言开发/Go语言进阶/数据操作/Gorm/教程/Gorm用法介绍.md
+                - 深入理解Go:
+                    - 为什么遍历map是无序的: 开发语言/Go语言开发/Go语言进阶/深入理解Go/为什么遍历map是无序的.md
             - Go语言高性能编程:
                 - 性能分析:
                     - benchmark基准测试: 开发语言/Go语言开发/Go语言高性能编程/性能分析/benchmark基准测试.md
@@ -409,6 +411,17 @@ nav:
                         - 第88天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇3/第88天.md
                         - 第89天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇3/第89天.md
                         - 第90天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇3/第90天.md
+                    - 篇4:
+                        - 第91天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇4/第91天.md
+                        - 第92天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇4/第92天.md
+                        - 第93天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇4/第93天.md
+                        - 第94天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇4/第94天.md
+                        - 第95天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇4/第95天.md
+                        - 第96天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇4/第96天.md
+                        - 第97天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇4/第97天.md
+                        - 第98天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇4/第98天.md
+                        - 第99天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇4/第99天.md
+                        - 第100天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇4/第100天.md 
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
